fix erros de compilacao